<resources>
    <string name="app_name">PowerEng</string>
    <string name="your_punching_pace">Your punching pace</string>
    <string name="description_days_strike">Mintain a bumping pace while meeting the daily goal</string>
    <string name="text_title_score">Score</string>
    <string name="text_title_unit">Unit</string>
    <string name="text_title_part">Part</string>
    <string name="change_photo">Change photo</string>
    <string name="name">Name</string>
    <string name="id">ID</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="save">Save</string>
    <string name="sign_out">Sign out</string>
    <string name="change_info">Change</string>
    <string name="hint_email">email</string>
    <string name="reset_password">Reset password</string>
    <string name="hint_password">password</string>
    <string name="sign_in">Sign in</string>
    <string name="send_reset_email">Send reset email</string>
    <string name="create_account">Create account</string>
    <string name="email_dont_verified">Your email address has not been verified, please verify it or sign in to another account!!!</string>
    <string name="continueAction">Continue</string>
    <string name="relogin">Relogin</string>
    <string name="check">Check</string>
    <string name="translate_the_sentence">Translate the sentence:</string>
    <string name="insert_a_word">Insert a word</string>
    <string name="enter_what_you_heard">Enter what you heard</string>
    <string name="success">Success!</string>
    <string name="error">Error!</string>
    <string name="correct_answer">\"Correct answer: \"</string>
    <string name="you_must_choose_an_answer">\"You must choose an answer!\"</string>
    <string name="the_game_is_destroyed">\"The game is destroyed!\"</string>
    <string name="message">\"message\"</string>
    <string name="account_recovery_email_has_been_sent">Account recovery email has been sent!!</string>
    <string name="account_created_email_sent_for_verification">Account created Email sent for verification!</string>
    <string name="you_have_reached_the_maximum_number_of_options">You have reached the maximum number of options!</string>
    <string name="email_is_empty">Email is empty</string>
    <string name="password_is_empty">Password is empty</string>
    <string name="you_win">YOU WIN</string>
    <string name="you_lose">YOU LOSE</string>
    <string name="the_number_of_players_is_not_equal_to_2">The number of players is not equal to 2</string>
    <string name="user_not_authorized">User not authorized</string>
    <string name="go_to_authorization">Go to authorization</string>
    <string name="the_function_is_not_available_authorization_required">The function is not available. Authorization required!!!</string>
    <string name="start">Start</string>
    <string name="start_with_friend">Start with friend</string>
    <string name="lets_try_to_correct_sentence_with_mistake">Lets try to correct sentence with mistake</string>
    <string name="multiplayer_game">Multiplayer game</string>
    <string name="enter_game_code">Enter Game Code</string>
    <string name="generate_code">Generate code</string>
    <string name="create">Create</string>
    <string name="join">Join</string>
    <string name="cancel">Cancel</string>
    <string name="finish_lesson">Finish Lesson</string>
    <string name="vs">VS</string>
    <string name="time">TIME</string>
    <string name="score">SCORE</string>
    <string name="spalsch_screen">SPALSCH SCREEN</string>
    <string name="scroll_to_the_top">Scroll to the top</string>
    <string name="info">Info</string>
    <string name="score_two_point">\"Score: \"</string>
    <string name="level">Level:</string>
    <string name="total_xp">TOTAL XP</string>
    <string name="speedy">SPEEDY</string>
    <string name="accuracy">ACCURACY</string>
    <string name="translate_word">Translate word</string>
    <string name="loading">LOADING</string>
    <string name="dont_found_tasks">Don\'t found tasks</string>
    <string name="confirmation_message">Do you want to go to the unit %1$d, part %2$d?</string>
    <string name="confirm_exit_title">Exit</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="confirm_exit_message">Are you sure you want to exit?</string>
</resources>